# bioseq

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: __init__.py  reverse.py  transcribe.py
src/bioseq/: gc_count.py
tests/bioseq/: test_gc_count.py  test_reverse.py  test_transcribe.py
workflows/: ci-cd.yml
